fix horizontal scroll margin

--- a/src/styles/Main.scss
+++ b/src/styles/Main.scss
@@ -138,7 +138,11 @@
     max-width: 90%;
 }
 
-// for sponsorship brochure download button
+.row {
+    margin-right: 0px;
+    margin-left: 0px;
+}
+
 @media only screen and (max-width: 991px) {
     .content {
         padding: 0px;
